# merrily

./: README.md  pyproject.toml
.github/workflows/: test.yml
merrily/: hello.py
tests/: test_hello.py
