[project]
name = "merrily"
version = "0.1.0"
description = "A test project to demonstrate a project created with `uv` and using `ruff` for linting and formatting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "ipython>=8.30.0",
    "isort>=5.13.2",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
